deploy/base/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-stack
  namespace: demo-stack-staging
spec:
  ingressClassName: traefik
  rules:
    - host: demo-stack.k8s.abj.smile.ci
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8080
          - path: /v2
            pathType: Prefix
            backend:
              service:
                name: frontend2
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 8080
